# elixxir-high-ctidh

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  BENCHMARKS.md  Makefile  PRIMES.md  README.md  README.python.md  TODO  analyze-costs  analyze-pr  autogen  bench.c  chain.py  checkct.c  costisog.py  costpoly.c  costpoly.py  costs.py  cpucycles.h  crypto_classify.c  crypto_classify.h  crypto_declassify.c  csidh.c  csidh.h  csidh_namespace.h  distmults.py  elligator.c  example-ctidh.c  fiat_p1024.c  fiat_p2048.c  fiat_p512.c  fp.h  fp1024.S  fp2048.S  fp2fiat.c  fp512.S  fp_namespace.h  greedy  highctidh-simple-benchmark.py  (+56 more)
highctidh/: __init__.py
tests/: test_highctidh.py
