[project]
name = 'highctidh'
version = '2022.23.08'
description = 'ctype bindings for highctidh'
readme = 'README.md'
requires-python = '>=3.10.4'
keywords = ['post-quantum cryptography', 'cryptography', 'csidh', 'ctidh']
authors = [ {email = 'jacob@appelbaum.net'}, {name = 'Jacob Appelbaum'} ]
maintainers = [ {email = 'jacob@appelbaum.net'}, {name = 'Jacob Appelbaum'} ]
dependencies = [ ]
license = { text = 'Public Domain' }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
