[metadata]
name = highctidh
version = 2022.10.17
author = Jacob Appelbaum
description = Python ctype bindings for highctidh
long_description = Python ctype bindings for highctidh released in 2021
url = https://ctidh.isogeny.org/software.html
keywords = post-quantum cryptography, cryptography, ctidh, csidh
license = Public Domain

[options]
python_requires = >=3.10.4

[options.extras_require]
test = pytest
